--- a/charts/incubator/openwebrxplus/Chart.yaml
+++ b/charts/incubator/openwebrxplus/Chart.yaml
@@ -7,7 +7,7 @@ annotations:
   truecharts.org/category: custom
   truecharts.org/max_helm_version: "3.17"
   truecharts.org/min_helm_version: "3.14"
-  truecharts.org/train: premium
+  truecharts.org/train: incubator
 apiVersion: v2
 appVersion: 0.21.1155
 dependencies:
