--- a/charts/incubator/openwebrxplus/Chart.yaml
+++ b/charts/incubator/openwebrxplus/Chart.yaml
@@ -19,8 +19,8 @@ dependencies:
     tags: []
     import-values: []
 deprecated: false
-description: Advanced Template to create your own TrueCharts-based Charts
-home: https://truecharts.org/charts/premium/app-template
+description: Improved version of the OpenWebRX online SDR
+home: https://truecharts.org/charts/incubator/openwebrxplus
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/app-template.webp
 keywords:
   - custom
