Set values image

--- a/charts/incubator/openwebrxplus/values.yaml
+++ b/charts/incubator/openwebrxplus/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/linuxserver/jackett
+  repository: slechev/openwebrxplus-softmbe
   pullPolicy: IfNotPresent
-  tag: 0.21.1155@sha256:5c408d64cb2385a3ee2934c8a5773eaadd5cd114e6b338328d60ab964ec0c88c
+  tag: 1.2.87@sha256:d2464ed8da5f2d41ce7c407f7e748722d912233993c591dea66511043aa8b6c7
 
 workload:
   main:
