--- a/charts/incubator/openwebrxplus/Chart.yaml
+++ b/charts/incubator/openwebrxplus/Chart.yaml
@@ -23,7 +23,8 @@ description: Improved version of the OpenWebRX online SDR
 home: https://truecharts.org/charts/incubator/openwebrxplus
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/openwebrxplus.webp
 keywords:
-  - custom
+  - radio
+  - sdr
 kubeVersion: '>=1.24.0-0'
 maintainers:
   - name: TrueCharts
