Set probes to HTTP /status.json for now

--- a/charts/incubator/openwebrxplus/values.yaml
+++ b/charts/incubator/openwebrxplus/values.yaml
@@ -10,11 +10,14 @@ workload:
         main:
           probes:
             liveness:
-              type: tcp
+              path: /status.json
+              type: http
             readiness:
-              type: tcp
+              path: /status.json
+              type: http
             startup:
-              type: tcp
+              path: /status.json
+              type: http
         env:
           OPENWEBRX_ADMIN_USER: "admin"
           OPENWEBRX_ADMIN_PASSWORD: "changeme"
