--- a/charts/incubator/openwebrxplus/Chart.yaml
+++ b/charts/incubator/openwebrxplus/Chart.yaml
@@ -30,7 +30,7 @@ maintainers:
   - name: TrueCharts
     email: info@truecharts.org
     url: https://truecharts.org
-name: app-template
+name: openwebrxplus
 sources:
   - https://github.com/luarvique/openwebrx
   - https://hub.docker.com/r/slechev/openwebrxplus
