--- a/containers/apps/devcontainer/Dockerfile
+++ b/containers/apps/devcontainer/Dockerfile
@@ -3,7 +3,6 @@ FROM mcr.microsoft.com/devcontainers/base:alpine
 
 ARG VERSION
 ARG CONTAINER_NAME
-ARG CONTAINER_VER
 
 # hadolint ignore=DL3008,DL3015,SC2086,SC2155
 RUN apk update && \
@@ -84,7 +83,7 @@ LABEL "org.opencontainers.image.source"="https://github.com/truecharts/apps"
 LABEL org.opencontainers.image.licenses="All-Rights-Reserved"
 LABEL org.opencontainers.image.title="${CONTAINER_NAME}"
 LABEL org.opencontainers.image.url="https://truecharts.org/docs/charts/${CONTAINER_NAME}"
-LABEL org.opencontainers.image.version="${CONTAINER_VER}"
+LABEL org.opencontainers.image.version="${VERSION}"
 LABEL org.opencontainers.image.description="Container for ${CONTAINER_NAME} by TrueCharts"
 LABEL org.opencontainers.image.authors="TrueCharts"
 LABEL org.opencontainers.image.documentation="https://truecharts.org/docs/charts/${CONTAINER_NAME}"
