--- a/.github/renovate/main.json5
+++ b/.github/renovate/main.json5
@@ -36,7 +36,8 @@
     "github>truecharts/public//.github/renovate/special/customClusterManagers.json5",
     "github>truecharts/public//.github/renovate/special/customRules.json5",
     "github>truecharts/public//.github/renovate/special/customVersioning.json5",
-    "github>truecharts/public//.github/renovate/special/customTalosClustertool.json5"
+    "github>truecharts/public//.github/renovate/special/customTalosClustertool.json5",
+    "github>truecharts/public//.github/renovate/special/devcontainer.json5"
   ],
   // Main Renovate configuration that lists package rules for various paths
   "packageRules": [
