added OIDC client secret
added  missing OIDC client secretto values.yaml

Signed-off-by: mccmax1395 <61606688+mccmax1395@users.noreply.github.com>

--- a/charts/stable/mealie/values.yaml
+++ b/charts/stable/mealie/values.yaml
@@ -60,6 +60,7 @@ mealie:
       signup_enabled: true
       configuration_url: ""
       client_id: ""
+      client_secret: ""
       user_group: ""
       admin_group: ""
       auto_redirect: false
