--- a/charts/stable/cloudreve/values.yaml
+++ b/charts/stable/cloudreve/values.yaml
@@ -2,47 +2,42 @@ image:
   pullPolicy: IfNotPresent
   repository: docker.io/cloudreve/cloudreve
   tag: 4.0.0@sha256:70da0d460bc0d6e8ea7455eeb9844031dadc8f6a745efe7f250971ff4443a4cf
+workload:
+  main:
+    podSpec:
+      containers:
+        main:
+          env:
+            CR_CONF_Database.Type: postgres
+            CR_CONF_Database.Host: "{{ .Values.cnpg.main.creds.host }}"
+            CR_CONF_Database.User: "{{ .Values.cnpg.main.user }}"
+            CR_CONF_Database.Name: "{{ .Values.cnpg.main.database }}"
+            CR_CONF_Database.Password: "{{ .Values.cnpg.main.creds.password }}"
+            CR_CONF_Database.Port: 5432
+            CR_CONF_Redis.Server: '{{ .Values.redis.creds.plain | trimAll "\"" }}:6379'
+            CR_CONF_Redis.User: "{{ .Values.redis.redisUsername }}"
+            CR_CONF_Redis.Password: "{{ .Values.redis.creds.redisPassword }}"
 persistence:
-  avatarpath:
-    enabled: true
-    mountPath: /cloudreve/avatar
   config:
     enabled: true
-    targetSelector:
-      main:
-        main:
-          mountPath: /cloudreve
-        init:
-          mountPath: /conf-init
-  uploadpath:
-    enabled: true
-    mountPath: /cloudreve/uploads
+    mountPath: "/cloudreve/data"
 securityContext:
   container:
     readOnlyRootFilesystem: false
     runAsGroup: 0
     runAsUser: 0
-workload:
-  main:
-    podSpec:
-      initContainers:
-        init:
-          enabled: true
-          type: init
-          imageSelector: image
-          command:
-            - "/bin/sh"
-            - "-c"
-            - |
-              set -x
-              ls -lasth /cloudreve
-              cp -a /cloudreve/cloudreve /conf-init/cloudreve
-              ls -lasht /conf-init
-      containers:
-        main: {}
 service:
   main:
     ports:
       main:
         port: 5212
         targetPort: 5212
+redis:
+  enabled: true
+  includeCommon: true
+  redisUsername: default
+cnpg:
+  main:
+    enabled: true
+    user: cloudreve
+    database: cloudreve
